# mal-haystack

./: .gitignore  README.md  pyproject.toml
docs/: background.rst  conf.py  implementation.rst  index.rst  objectives.rst  package-lock.json  technologies.rst  user_guide.rst
mal_haystack/: __init__.py  __main__.py  pipelines.py
mal_haystack/nodes/: __init__.py  dataframe_converter.py  dataframer.py  embedding_retriever.py  qa_extractor.py  series_converter.py  zip_dataframer.py  zip_lister.py
notebooks/: eda.ipynb
