[tool.poetry]
name = "mal-haystack"
version = "0.1.0"
description = ""
authors = ["Brian McClune <brian.mcclune@unnpp.gov>"]
readme = "README.md"
packages = [{include = "mal_haystack"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = { version = "1.12.1", source="torch"}
torchaudio = { version = "0.12.1", source="torch"}
torchvision = { version = "0.13.1", source="torch"}
farm-haystack = "^1.9.1"
kaggle = "^1.5.12"
pandas = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu116"
secondary = true